# blocking-comment

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  blockingcomment.py  check_for_blocking_comments.py  pre-commit-blocking-comment.py  precommitblockingcomment.py  pyproject.toml  setup.py
preCommitBlockingComment/: __main__.py
