[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "pre-commit-blocking-comment"
version = "0.1"
description = "Pre-commit hook to check for blocking comments before commit"
authors = ["Daniel Hagen"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
regex = "*"

[tool.poetry.scripts]
pre-commit-blocking-comment = "pre_commit_blocking_comment:main"
